# libqapt6

./: .gitignore  CMakeLists.txt  Jenkinsfile  QApt6Config.cmake.in  libqapt6.pc.cmake
.github/workflows/: ci.yml
autotests/: CMakeLists.txt  transactionerrorhandlingtest.cpp
debian/: control  libqapt-dev.acc.in  rules
example/: CMakeLists.txt  TestQApt.cpp  TestQApt.h  cacheupdatewidget.cpp  cacheupdatewidget.h  commitwidget.cpp  commitwidget.h  main.cpp
src/: CMakeLists.txt  backend.cpp  changelog.cpp  config.cpp  debfile.cpp  history.cpp  package.cpp
src/worker/: CMakeLists.txt  aptlock.cpp  aptworker.cpp  transaction.cpp  transaction.hpp  transactionqueue.cpp  workeracquire.cpp  workerdaemon.cpp  workerinstallprogress.cpp
utils/plasma-runner-installer/: CMakeLists.txt
utils/qapt-deb-installer/: CMakeLists.txt
utils/qapt-deb-thumbnailer/: CMakeLists.txt
